--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,6 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "1.4.5-lts.1",
@@ -28,5 +28,8 @@
     "path": "0.12.7",
     "sqlite3": "^5.1.7",
     "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
